# smart_quant

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  conandata.yml  conanfile.py  dep.md
.cache/clangd/index/: binary_logger.cpp.ADD5520A5BDE8E7D.idx  binary_logger.hpp.F300AB90E4CDEE12.idx  cancel_factor.cpp.4402AC17CACF5DF8.idx  cancel_factor.hpp.9D16A2A25E0AE445.idx  delta_factor.cpp.3070407E3D658CD7.idx  delta_factor.hpp.53EA6BFC253E3557.idx  fix_md_gateway.cpp.0A1C3D088C681F6A.idx  fix_md_gateway.hpp.F20EF8AD6867799F.idx  fix_settings.cpp.5E9282271DDCD5A0.idx  fix_settings.hpp.16B65D332F4A049D.idx  main.cpp.46C437388E82781E.idx  main.cpp.A9175EDB9DF59383.idx  main.cpp.F5DE10FC4866D0F6.idx  order_book.cpp.EE474FFABCEA7226.idx  order_book.hpp.BAF3CAA996D616C8.idx  order_manager.cpp.B14A208692E7F2EA.idx  order_manager.hpp.8C732BAD1F7DC7BB.idx  risk_manager.cpp.2DAE94A6A070181F.idx  risk_manager.hpp.7A7CEEEC32D9DE09.idx  signal_engine.cpp.36956E9D73312079.idx  signal_engine.hpp.94A35D4597C43F59.idx  spsc_queue.hpp.40003522D618E26E.idx  test_alpha.cpp.DFDA1012AFDEA7C5.idx  test_order_book.cpp.5147539C0D5E16F6.idx  test_risk.cpp.916EA721199DF5EE.idx  tsc_clock.cpp.FFE3E6155A76B641.idx  tsc_clock.hpp.FB3FCA2F75C741D7.idx  types.hpp.92D8AA43D4339438.idx
apps/backtest/: main.cpp
apps/engine/: main.cpp
apps/logger/: main.cpp
config/: config.yaml  fix_market_data.cfg  fix_trade.cfg
docs/: ARCHITECTURE.md
include/qf/common/: http_client.hpp
include/qf/core/: types.hpp
include/qf/data/: data_distributor.hpp  data_parser.hpp  data_source.hpp  historical_loader.hpp  market_cache.hpp
include/qf/infrastructure/: config.hpp  logger.hpp  thread_pool.hpp
include/qf/interface/: api_server.hpp
include/qf/risk/: circuit_breaker.hpp  compliance_checker.hpp  risk_engine.hpp  risk_metrics.hpp
include/qf/strategy/: signal_generator.hpp  strategy_base.hpp  strategy_configurator.hpp  strategy_factory.hpp  strategy_scheduler.hpp
include/qf/trading/: account_manager.hpp  order_generator.hpp  order_manager.hpp  position_manager.hpp  report_handler.hpp  trading_interface.hpp
include/smartquant/alpha/: cancel_factor.hpp  delta_factor.hpp  signal_engine.hpp
include/smartquant/common/: memory_pool.hpp  spsc_queue.hpp  tsc_clock.hpp  types.hpp
include/smartquant/log/: binary_logger.hpp
include/smartquant/md/: fix_md_gateway.hpp  order_book.hpp
include/smartquant/oms/: order_manager.hpp
include/smartquant/risk/: risk_manager.hpp
include/sources/: binance_data_source.hpp  dummy_data_source.hpp
include/strategies/: sample_strategy.hpp
include/trade/: dummy_trading_interface.hpp
src/: main.cpp
src/alpha/: cancel_factor.cpp  delta_factor.cpp  signal_engine.cpp
src/common/: tsc_clock.cpp
src/log/: binary_logger.cpp
src/md/: fix_md_gateway.cpp  order_book.cpp
src/oms/: order_manager.cpp
src/qf/common/: http_client.cpp
src/qf/data/: data_distributor.cpp  data_parser.cpp  data_source.cpp  data_types.cpp  historical_loader.cpp  market_cache.cpp
src/qf/infrastructure/: config.cpp  logger.cpp  thread_pool.cpp
src/qf/interface/: api_server.cpp
src/qf/risk/: circuit_breaker.cpp  compliance_checker.cpp  risk_engine.cpp  risk_metrics.cpp
src/qf/strategy/: signal_generator.cpp  strategy_base.cpp  strategy_configurator.cpp  strategy_factory.cpp  strategy_scheduler.cpp
src/qf/trading/: account_manager.cpp  order_generator.cpp  order_manager.cpp  position_manager.cpp  report_handler.cpp  trading_interface.cpp
src/risk/: risk_manager.cpp
src/sources/: binance_data_source.cpp  dummy_data_source.cpp
src/strategies/: sample_strategy.cpp
src/trade/: dummy_trading_interface.cpp
tests/: test_alpha.cpp  test_order_book.cpp  test_risk.cpp
